--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -55,9 +57,13 @@ dependencies {
     kapt 'android.arch.lifecycle:compiler:1.1.1'
 
 
-    // recyclerview, cardview
+    // recyclerview
     //noinspection GradleCompatible
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0' -- deprecated
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    // cardview
     //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    //implementation 'com.android.support:cardview-v7:28.0.0' ---- deprecated
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
