--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     //noinspection GradleCompatible
     //implementation 'com.android.support:cardview-v7:28.0.0' ---- deprecated
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    //Coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 }
